fix watchlist button jumping

--- a/src/modules/market/components/market-header/market-header.styles.less
+++ b/src/modules/market/components/market-header/market-header.styles.less
@@ -277,6 +277,10 @@
   }
 }
 
+span.MarketHeader__filledIcon {
+  padding-right: 0;
+}
+
 span.MarketHeader__iconHover {
   display: none;
   padding: 0;
